# RunawayTechBuilding1

./: README.md  新增项目说明.md  曹越关于新增的说明.md
game_main/: CMakeLists.txt  main.cpp
game_main/main/: Application.cpp  Application.hpp  Application_Update.cpp  Application_default.cpp  GameStateMachine.hpp
game_main/menu/: menu.cpp  menu.hpp  menuStateMachine.hpp  menu_UpdateText.cpp  menu_default.cpp  menu_key.cpp  menu_mouse.cpp
game_main/music/: music.cpp  music.hpp
game_main/player/: player.cpp  player.hpp
game_main/scene/abnormity/: CMakeLists.txt
game_main/scene/abnormity/0_normal/: CMakeLists.txt  normal.cpp  normal.hpp
game_main/scene/abnormity/1.ClassroomWithManything/: CMakeLists.txt  ClassroomWithManything.hpp
game_main/scene/abnormity/2.ClassroomWithWrongDesks/: CMakeLists.txt  ClassroomWithWrongDesks.hpp
game_main/scene/abnormity/3.CorridorWithWrongBoard/: CmakeLists.txt  CorridorWithWrongBoard.hpp
game_main/scene/abnormity/_manage/: AllAbnormity.cpp  AllAbnormity.hpp  CMakeLists.txt  abnormity.cpp  abnormity.hpp  classroom.cpp  classroom_desk.cpp  corridor.cpp  mirror.cpp  rule.cpp  toilot.cpp
game_main/scene/normity/: CMakeLists.txt  classroom.cpp  classroom.hpp  classroom_desk.cpp  corridor.cpp  corridor.hpp  corridor_clock.cpp  mirror.cpp  rule.cpp  scene.cpp  scene.hpp  toilot.cpp  toilot.hpp
game_main/typeface/: type.cpp  type.hpp
